[package]
name = "os_metric_beats"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] } 
flexi_logger = "0.27.4"
log = "0.4.20"
chrono = "0.4.31"
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
elasticsearch = "8.4.0-alpha.1"
getset = "0.1.2"
derive-new = "0.6.0"
futures = "0.3.30"
async-trait = "0.1.83"
rand = "0.8.5"
once_cell = "1.20.2"
sysinfo = "0.28.0"
local-ip-address = "0.6.3"
toml = "0.8.19"
dotenv = "0.15.0"
netstat2 = "0.11.1"

[target.'cfg(windows)'.dependencies]
wmi = "0.17"